--- a/pages/MusicPage.html
+++ b/pages/MusicPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Sass/Main.css">
+    <link rel="stylesheet" href="/Sass/main.css">
     <title>Music Page</title>
 </head>
 <body>
@@ -33,7 +33,6 @@
           <div class="GameTrackThree">
             <iframe class="QOTHOST" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1442916745%3Fsecret_token%3Ds-9PtPeHjeL3p&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
-    </div>
         <a class="MPHeader">Music Production</a>
 
         <div class="TrackOne">
