finished about me page

--- a/pages/AboutMePage.html
+++ b/pages/AboutMePage.html
@@ -22,22 +22,25 @@
     </header>
 
     <div class="aboutmecontainer">
-        <div class="aboutmetitle">
-            <a>Hello, my name is Omorian</a>
-        </div>
-        <div class="aboutmetext">
-<a>I am a Game Development student from the Netherlands, I am currently studying at Noorderpoort in Groningen.<br>
-    I have been making games in Unity for 2.5 years, and i have recently started working in Unreal, using blueprints to make the functionality.
-<br>
-<br>
-Since i have primarily worked with Unity and C#, I have become pretty well versed at working with those. <br>
-Programming-wise I don't specialize in anything, and instead I usually do whatever task is at hand, and I like to experiment with different things to see what does and doesn't work. <br>
-<br>
-<br>
-In my past time I like to make music, either by playing guitar, or by making electronic music on my computer, and i have used those skills to work as a sound designer in the game jams that I have participated in. <br>
-While working on the game jam projects, I have provided both sound effects and music that were fitting for the games, which you can find on </a><a href="/pages/MusicPage.html">my music page</a>
-        </div>
-    </div>
-</body>
+        <img class="Selfie" src="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" alt="Picture of me">
+        <div class="ABM">
+            <div class="aboutmetitle">
+                <a>Hello, my name is Omorian</a>
+            </div>
+            <div class="aboutmetext">
+                <a>I am a Game Development student from the Netherlands, I am currently studying at Noorderpoort in Groningen.<br>
+                    I have been making games in Unity for 2.5 years, and i have recently started working in Unreal, using blueprints to make the functionality.
+                    <br>
+                    <br>
+                    Since i have primarily worked with Unity and C#, I have become pretty well versed at working with those. <br>
+                    Programming-wise I don't specialize in anything, and instead I usually do whatever task is at hand, and I like to experiment with different things to see what works. <br>
+                    <br>
+                    <br>
+                    In my past time I like to make music, either by playing guitar, or by making electronic music on my computer, and i have used those skills to work as a sound designer in the game jams that I have participated in. <br>
+                    While working on the game jam projects, I have provided both sound effects and music that were fitting for the games, which you can find on </a><a href="/pages/MusicPage.html" style="color: #00a2ff;">my music page</a>
+                </div>
+            </div>
+            </div>
+        </body>
 
 </html>
