added CV to contact page

--- a/pages/AboutMePage.html
+++ b/pages/AboutMePage.html
@@ -16,7 +16,7 @@
             <div class="about-me"><a href="/pages/AboutMePage.html" style="color: #00a2ff;">About me</a></div>
             <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
             <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
-            <div class="contact"><a href="/pages/ContactPage.html">Contact</a></div>
+            <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
         </div>
 
     </header>
