--- a/pages/ContactPage.html
+++ b/pages/ContactPage.html
@@ -14,7 +14,7 @@
             <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
             <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
             <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
-            <div class="contact"><a href="/pages/ContactPage.html" style="color: #00a2ff;">Contact</a></div>
+            <div class="contact"><a href="/pages/ContactPage.html" style="color: #00a2ff;">Contact & CV</a></div>
             
         </div>
 
@@ -28,5 +28,7 @@
         </div>
         <img class="CI-Image" src="https://cdn.discordapp.com/attachments/973888571339575347/973892156970401912/CIScreen.png" alt="">
     </div>
+
+    <iframe src="Files/Omorian Clifford - Game Development CV.pdf" frameborder="0" class="CV"></iframe>
 </body>
 </html>
