--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -14,7 +14,7 @@
             <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
             <div class="projects"><a href="/pages/ProjectsPage.html" style="color: #00a2ff;">Projects</a></div>
             <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
-            <div class="contact"><a href="/pages/ContactPage.html">Contact</a></div>
+            <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
         </div>
 
     </header>
