home page base done

--- a/index.html
+++ b/index.html
@@ -17,8 +17,37 @@
             <div class="music"><a href="pages/MusicPage.html">Music</a></div>
             <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
         </div>
-
     </header>
+
+    <div class="PageContainer">
+        <div class="AMC">
+<a href="/pages/AboutMePage.html">
+    <p>About Me Page</p>
+    <img class="ABMImg" src="https://cdn.discordapp.com/attachments/973888571339575347/981836688525504562/ABMImg.png" alt="">
+</a>
+        </div>
+
+        <div class="PJC">
+            <a href="/pages/ProjectsPage.html">
+                <p>Projects Page</p>
+                <img class="ProjectImg" src="https://cdn.discordapp.com/attachments/973888571339575347/981538625223291000/unknown.png" alt="">
+            </a>
+        </div>
+
+        <div class="MC">
+            <a class="MPC" href="/pages/MusicPage.html">
+                <p>Music Page</p>
+                <img class="MusicImg" src="https://cdn.discordapp.com/attachments/973888571339575347/981536042102439996/unknown.png" alt="">
+            </a>
+        </div>
+        
+        <div class="CCVC">
+<a href="/pages/ContactPage.html">
+    <p>Contact & CV</p>
+    <img class="CCVCImage" src="https://cdn.discordapp.com/attachments/973888571339575347/981838315437293578/ContactImage.png" alt="">
+</a>
+        </div>
+    </div>
 </body>
 
 </html>
