--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/Sass/main.css">
     <title>Projects Page</title>
 </head>
+
 <body>
     <header class="header" id="header">
         <div class="header-container">
@@ -22,12 +24,14 @@
     <div class="GamesContainer">
         <a class="PText">Projects</a>
         <div class="GameOne">
-           <p><a class="TUE" href="#Popup1">
-               <img class="TUEImg" src="https://cdn.discordapp.com/attachments/973888571339575347/978268615386234880/unknown.png" alt="The Unseeing Eye Art">
-               <div class="TUEOverlay">A horror game in which you "see" with sound <br>(Unity) [GGJ 2022]</div>
-            </a></p>
+            <p><a class="TUE" href="#Popup1">
+                    <img class="TUEImg"
+                        src="https://cdn.discordapp.com/attachments/973888571339575347/978268615386234880/unknown.png"
+                        alt="The Unseeing Eye Art">
+                    <div class="TUEOverlay">A horror game in which you "see" with sound <br>(Unity) [GGJ 2022]</div>
+                </a></p>
         </div>
-        <div id = "Popup1" class="P1Overlay" href="#">
+        <div id="Popup1" class="P1Overlay" href="#">
             <div class="G1Popup">
                 <h2>The Unseeing Eye</h2>
                 <div class="G1Text">
@@ -39,48 +43,104 @@
                 <a href="https://jusawichan.itch.io/the-unseeing-eye">here</a>
                 <a class="CloseButton" href="#"><br>&times;</a>
             </div>
-        </div> 
+        </div>
 
         <div class="GameTwo">
             <p><a class="TD" href="#Popup2">
-                <img class="TDImg" src="https://cdn.discordapp.com/attachments/973888571339575347/976425298016993280/unknown.png" alt="Tower Defense Screenshot">
-                <div class="TDOverlay">A tower defense game in which you defend a computer against human viruses<br>(Unity)</div>
-             </a></p>
-         </div>
-         <div id = "Popup2" class="P2Overlay" href="#">
-             <div class="G2Popup">
-                 <h2>Tower Defense</h2>
-                 <div class="G2Text">
-                     In this tower defense game, you defend a computer's CPU against human viruses. <br>
-                     The Viruses spawn randomly on 1 of 4 paths, so each playthrought is different. 
-                 </div>
-                 <a>you can find the project</a>
-                 <a href="https://shreddexz.itch.io/antivirus-tower-defense">here</a>
-                 <a class="CloseButton" href="#"><br>&times;</a>
-             </div>
-         </div> 
+                    <img class="TDImg"
+                        src="https://cdn.discordapp.com/attachments/973888571339575347/976425298016993280/unknown.png"
+                        alt="Tower Defense Screenshot">
+                    <div class="TDOverlay">A tower defense game in which you defend a computer against human
+                        viruses<br>(Unity)</div>
+                </a></p>
+        </div>
+        <div id="Popup2" class="P2Overlay" href="#">
+            <div class="G2Popup">
+                <h2>Tower Defense</h2>
+                <div class="G2Text">
+                    In this tower defense game, you defend a computer's CPU against human viruses. <br>
+                    The Viruses spawn randomly on 1 of 4 paths, so each playthrought is different.
+                </div>
+                <a>you can find the project</a>
+                <a href="https://shreddexz.itch.io/antivirus-tower-defense">here</a>
+                <a class="CloseButton" href="#"><br>&times;</a>
+            </div>
+        </div>
 
-         <div class="GameThree">
-             <p><a class="IRT" href="#Popup3">
-                 <img class="IRTImg" src="https://cdn.discordapp.com/attachments/973888571339575347/976745952620716053/unknown.png" alt="I Remember This Art">
-                 <div class="IRTOverlay">A horror game in which you wake up in a crashed car, and have to figure out what happened<br>(Unity) [GGJ 2021]</div>
-              </a></p>
-          </div>
-          <div id = "Popup3" class="P3Overlay" href="#">
-              <div class="G3Popup">
-                  <h2>I Remember This</h2>
-                  <div class="G3Text">
-                      You wake up after crashing your car into a tree. <br>
-                      You don't know what happened. The only thing you know is that you have to get home. <br>
-                      It shouldn't be too far from where you are.
-                  </div>
-                  <a>you can find the project</a>
-                  <a href="https://jusawichan.itch.io/i-remember-this">here</a>
-                  <a class="CloseButton" href="#"><br>&times;</a>
-              </div>
-          </div> 
-     </div>
+        <div class="GameThree">
+            <p><a class="IRT" href="#Popup3">
+                    <img class="IRTImg"
+                        src="https://cdn.discordapp.com/attachments/973888571339575347/976745952620716053/unknown.png"
+                        alt="I Remember This Art">
+                    <div class="IRTOverlay">A horror game in which you wake up in a crashed car, and have to figure out
+                        what happened<br>(Unity) [GGJ 2021]</div>
+                </a></p>
+        </div>
+        <div id="Popup3" class="P3Overlay" href="#">
+            <div class="G3Popup">
+                <h2>I Remember This</h2>
+                <div class="G3Text">
+                    You wake up after crashing your car into a tree. <br>
+                    You don't know what happened. The only thing you know is that you have to get home. <br>
+                    It shouldn't be too far from where you are.
+                </div>
+                <a>you can find the project</a>
+                <a href="https://jusawichan.itch.io/i-remember-this">here</a>
+                <a class="CloseButton" href="#"><br>&times;</a>
+            </div>
+        </div>
+
+        <div class="GameFour">
+            <p><a class="QOTH" href="#Popup4">
+                    <img class="QOTHImg"
+                        src="https://cdn.discordapp.com/attachments/973888571339575347/976744859899658250/unknown.png"
+                        alt="Queen of the hill Art">
+                    <div class="QOTHOverlay">A tower/base defense game in which you have to defend your
+                        ant-hill<br>(Unity/web)
+                        [GGJ 2020]</div>
+                </a></p>
+        </div>
+        <div id="Popup4" class="P4Overlay" href="#">
+            <div class="G4Popup">
+                <h2>Queen of the hill</h2>
+                <div class="G4Text">
+                    You have to defend your queen from the wasps, who are <br>
+                    trying to kill her. Build your defenses and keep her alive.
+                </div>
+                <a>you can find the project</a>
+                <a href="https://madifold.itch.io/queen-of-the-hill">here</a>
+                <a class="CloseButton" href="#"><br>&times;</a>
+            </div>
+        </div>
+
+        <div class="GameFive">
+            <p><a class="TLS" href="#Popup5">
+                    <img class="TLSImg"
+                        src="https://cdn.discordapp.com/attachments/973888571339575347/992350249614053467/unknown.png"
+                        alt="The Last Scientist Art">
+                    <div class="TLSOverlay">A text based adventure game in which you wake up in a dark room, and have to
+                        figure out what happened<br>(C# console)
+                    </div>
+                </a></p>
+        </div>
+        <div id="Popup5" class="P5Overlay" href="#">
+            <div class="G5Popup">
+                <h2>The Last Scientist</h2>
+                <div class="G5Text">
+                    You wake up in a dark room, and you have no idea what happened.
+                    <br> You are alone and have to figure it out by yourself.
+                </div>
+                <a>you can find the project</a>
+                <a href="https://shreddexz.itch.io/the-last-scientist">here</a>
+                <a class="CloseButton" href="#"><br>&times;</a>
+            </div>
+        </div>
     </div><!-- game container end -->
+    </div>
+
+
+    </div>
 
 </body>
+
 </html>
