--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -135,6 +135,27 @@
                 <a class="CloseButton" href="#"><br>&times;</a>
             </div>
         </div>
+
+        <div class="GameSix">
+            <p><a class="TTD" href="#Popup6">
+                    <img class="TTDImg"
+                        src="https://cdn.discordapp.com/attachments/973888571339575347/992532642014707762/TTD_Img2.png"
+                        alt="Time to die Art">
+                    <div class="TTDOverlay">an endless shooter with audio visualization<br>(Unreal Engine)
+                    </div>
+                </a></p>
+        </div>
+        <div id="Popup6" class="P6Overlay" href="#">
+            <div class="G6Popup">
+                <h2>Time to die</h2>
+                <div class="G6Text">
+                    This is an FPS game in which you have to survive as long as possible against an endless amount of enemies.
+                </div>
+                <a>you can find the project</a>
+                <a href="https://shreddexz.itch.io/time-to-die">here</a>
+                <a class="CloseButton" href="#"><br>&times;</a>
+            </div>
+        </div>
     </div><!-- game container end -->
     </div>
 
