--- a/pages/ContactPage.html
+++ b/pages/ContactPage.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Sass/main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Contact Page</title>
 </head>
+
 <body>
     <header class="header" id="header">
         <div class="header-container">
@@ -15,20 +18,39 @@
             <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
             <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
             <div class="contact"><a href="/pages/ContactPage.html" style="color: #00a2ff;">Contact & CV</a></div>
-            
         </div>
-
+        <ul class="Menu" id="Menu">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="AboutMePage.html">About Me</a></li>
+            <li><a href="ProjectsPage.html">Projects</a></li>
+            <li><a href="MusicPage.html">Music</a></li>
+            <li><a href="ContactPage.html">Contact & CV</a></li>
+            <a class="Close" href="#">
+                <span class="material-icons">
+                    close
+                </span>
+            </a>
+        </ul>
+        <a class="Hamburger" href="#Menu">
+            <span class="material-icons">
+                menu
+            </span>
+        </a>
     </header>
     <p><a href="https://www.linkedin.com/in/omorian-clifford-4139ba233/">
-    <img class="linkedin" src="https://cdn.discordapp.com/attachments/973888571339575347/975684567648333835/LI-In-Bug.png" alt="My Linkedin">
-    </a></p>
+            <img class="linkedin"
+                src="https://cdn.discordapp.com/attachments/973888571339575347/975684567648333835/LI-In-Bug.png"
+                alt="My Linkedin">
+        </a></p>
     <div class="CIContainter">
         <div class="CIHeader">
             <a>Contact Information</a>
         </div>
-        <img class="CI-Image" src="https://cdn.discordapp.com/attachments/973888571339575347/973892156970401912/CIScreen.png" alt="">
+        <img class="CI-Image"
+            src="https://cdn.discordapp.com/attachments/973888571339575347/973892156970401912/CIScreen.png" alt="">
     </div>
 
     <iframe src="Files/Omorian Clifford - Game Development CV.pdf" frameborder="0" class="CV"></iframe>
 </body>
+
 </html>
