--- a/pages/MusicPage.html
+++ b/pages/MusicPage.html
@@ -1,50 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Sass/main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Music Page</title>
 </head>
+
 <body>
     <header class="header" id="header">
         <div class="header-container">
             <div class="namehome"><a href="/index.html">Omorian Clifford</a></div>
             <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
             <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
-            <div class="music"><a href="/pages/MusicPage.html"  style="color: #00a2ff;">Music</a></div>
+            <div class="music"><a href="/pages/MusicPage.html" style="color: #00a2ff;">Music</a></div>
             <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
         </div>
-
+        <ul class="Menu" id="Menu">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="AboutMePage.html">About Me</a></li>
+            <li><a href="ProjectsPage.html">Projects</a></li>
+            <li><a href="MusicPage.html">Music</a></li>
+            <li><a href="ContactPage.html">Contact & CV</a></li>
+            <a class="Close" href="#">
+                <span class="material-icons">
+                    close
+                </span>
+            </a>
+        </ul>
+        <a class="Hamburger" href="#Menu">
+            <span class="material-icons">
+                menu
+            </span>
+        </a>
     </header>
 
     <div class="MusicContainer">
         <a class="MText">Music</a>
         <a class="GMHeader">Game Audio</a>
         <div class="GameTrackOne">
-            <iframe class="TUEOST" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1388165524&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-         </div>
- 
-         <div class="GameTrackTwo">
-            <iframe class="IRTOST" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1273502089%3Fsecret_token%3Ds-leR7DafQBxO&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-          </div>
- 
-          <div class="GameTrackThree">
-            <iframe class="QOTHOST" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1442916745%3Fsecret_token%3Ds-9PtPeHjeL3p&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="TUEOST"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1388165524&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+
+        <div class="GameTrackTwo">
+            <iframe class="IRTOST"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1273502089%3Fsecret_token%3Ds-leR7DafQBxO&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+
+        <div class="GameTrackThree">
+            <iframe class="QOTHOST"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1442916745%3Fsecret_token%3Ds-9PtPeHjeL3p&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
         <a class="MPHeader">Music Production</a>
 
         <div class="TrackOne">
-            <iframe class="TOne" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1241556769&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="TOne"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1241556769&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
 
         <div class="TrackTwo">
-            <iframe class="TTwo" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1093557391&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="TTwo"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1093557391&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
 
         <div class="TrackThree">
-            <iframe class="TThree" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1039681660&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="TThree"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1039681660&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
 </body>
+
 </html>
