added embeds to every page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta property="og:url" content="https://www.omorianclifford.com/" />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
     <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-    <meta name="theme-color" content="#FF0000">
-    
-    <!-- Include this to make the og:image larger -->
+    <meta name="theme-color" content="#00a2ff">
     <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
 <head>
     <meta charset="UTF-8">
