--- a/pages/ContactPage.html
+++ b/pages/ContactPage.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <meta property="og:title" content="Omorian Clifford's Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.omorianclifford.com/pages/ContactPage" />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+    <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+    <meta name="theme-color" content="#00a2ff">
+    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
