added projects to music page, other changes

--- a/pages/MusicPage.html
+++ b/pages/MusicPage.html
@@ -61,6 +61,17 @@
             <iframe class="QOTHOST"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1442916745%3Fsecret_token%3Ds-9PtPeHjeL3p&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
+
+        <div class="SfinxInternshipTracks">
+            <iframe class="SGST" 
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1564467463%3Fsecret_token%3Ds-6UkMSG8oT0P&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+
+        <div class="SpiritFox">
+            <iframe class="SFST"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1440776236&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+        
         <a class="MPHeader">Music Production</a>
 
         <div class="TrackOne">
