--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta property="og:title" content="Omorian Clifford's Portfolio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omorianclifford.com/pages/ProjectsPage">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
-    <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-    <meta name="theme-color" content="#00a2ff">
-    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+<meta property="og:title" content="Omorian Clifford's Portfolio" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.omorianclifford.com/pages/ProjectsPage">
+<meta property="og:image"
+    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+<meta property="og:description"
+    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+<meta name="theme-color" content="#00a2ff">
+<meta name="twitter:card"
+    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Sass/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Projects Page</title>
 </head>
 
@@ -44,10 +50,25 @@
         </a>
     </header>
 
+    <div class="questionPanel" id="questionPanel">
+        <h1>How does this work?</h1>
+        <p>You can click on the images to make a popup appear, which will show you a description of the game.<br>
+            Alternatively, you can press and hold for a short amount of time to show a shorter description of the game
+        </p>
+        <a class="CloseButton" href="#"><br>&times;</a>
+    </div>
+
+    </div>
+
     <div class="GamesContainer">
         <div class="PText">
             <a>Projects</a>
         </div>
+        <a class="question" href="#questionPanel">
+            <span class="material-symbols-outlined">
+                help
+            </span>
+        </a>
         <div class="GameOne">
             <p><a class="TUE" href="#Popup1">
                     <img class="TUEImg"
