Replaced CV, made some improvements

--- a/pages/ContactPage.html
+++ b/pages/ContactPage.html
@@ -53,14 +53,15 @@
 
     <!-- replace below with badge? -->
     <p> 
+        <a class="linkedinText" href="https://www.linkedin.com/in/omorianclifford/">My Linkedin</a>
         <a href="https://www.linkedin.com/in/omorianclifford/">
             <img class="linkedin"
                 src="https://cdn.discordapp.com/attachments/973888571339575347/975684567648333835/LI-In-Bug.png"
                 alt="My Linkedin">
         </a>
-    </p>            
+    </p>        
 
-    <iframe src="Files/Omorian Clifford - Game Development CV.pdf" frameborder="0" class="CV"></iframe>
+    <iframe src="/pages/Files/Omorian Clifford - Game Development CV 2023.pdf" frameborder="0" class="CV"></iframe>
 </body>
 
 </html>
