Added animations and rounded corners

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html lang="en">
-    <meta property="og:title" content="Omorian Clifford's Portfolio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omorianclifford.com/" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
-    <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-    <meta name="theme-color" content="#00a2ff">
-    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+<meta property="og:title" content="Omorian Clifford's Portfolio" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.omorianclifford.com/" />
+<meta property="og:image"
+    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+<meta property="og:description"
+    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+<meta name="theme-color" content="#00a2ff">
+<meta name="twitter:card"
+    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,31 +49,39 @@
 
     <div class="PageContainer">
         <div class="AMC">
-<a href="/pages/AboutMePage.html">
-    <span>About Me Page</span>
-    <img class="ABMImg" src="https://cdn.discordapp.com/attachments/973888571339575347/981836688525504562/ABMImg.png" alt="">
-</a>
+            <a href="/pages/AboutMePage.html">
+                <span>About Me Page</span>
+                <img class="ABMImg"
+                    src="https://cdn.discordapp.com/attachments/973888571339575347/981836688525504562/ABMImg.png"
+                    alt="">
+            </a>
         </div>
 
         <div class="PJC">
             <a href="/pages/ProjectsPage.html">
                 <span>Projects Page</span>
-                <img class="ProjectImg" src="https://cdn.discordapp.com/attachments/973888571339575347/981538625223291000/unknown.png" alt="">
+                <img class="ProjectImg"
+                    src="https://cdn.discordapp.com/attachments/973888571339575347/981538625223291000/unknown.png"
+                    alt="">
             </a>
         </div>
 
         <div class="MC">
             <a class="MPC" href="/pages/MusicPage.html">
                 <span>Music Page</span>
-                <img class="MusicImg" src="https://cdn.discordapp.com/attachments/973888571339575347/981536042102439996/unknown.png" alt="">
+                <img class="MusicImg"
+                    src="https://cdn.discordapp.com/attachments/973888571339575347/981536042102439996/unknown.png"
+                    alt="">
             </a>
         </div>
-        
+
         <div class="CCVC">
-<a href="/pages/ContactPage.html">
-    <span>Contact & CV</span>
-    <img class="CCVCImage" src="https://cdn.discordapp.com/attachments/973888571339575347/981838315437293578/ContactImage.png" alt="">
-</a>
+            <a href="/pages/ContactPage.html">
+                <span>Contact & CV</span>
+                <img class="CCVCImage"
+                    src="https://cdn.discordapp.com/attachments/973888571339575347/981838315437293578/ContactImage.png"
+                    alt="">
+            </a>
         </div>
     </div>
 </body>
