--- a/pages/AboutMePage.html
+++ b/pages/AboutMePage.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta property="og:title" content="Omorian Clifford's Portfolio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omorianclifford.com/pages/AboutMePage" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
-    <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-    <meta name="theme-color" content="#00a2ff">
-    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+<meta property="og:title" content="Omorian Clifford's Portfolio" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.omorianclifford.com/pages/AboutMePage" />
+<meta property="og:image"
+    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+<meta property="og:description"
+    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+<meta name="theme-color" content="#00a2ff">
+<meta name="twitter:card"
+    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,11 +64,11 @@
             <div class="aboutmetext">
                 <a>I am a Game Development student from the Netherlands, I am currently studying at Noorderpoort in
                     Groningen.<br>
-                    I have been making games in Unity for 3.5 years, and i have recently started working in Unreal,
-                    using blueprints to make the functionality.
+                    I have been making games in Unity since 2019, and I have recently started working in Unreal,
+                    using blueprints to create the functionality.
                     <br>
                     <br>
-                    Since i have primarily worked with Unity and C#, I have become pretty well versed at working with
+                    Since I have primarily worked with Unity and C#, I have become pretty well versed at working with
                     those. <br>
                     Programming-wise I don't specialize in anything, and instead I usually do whatever task is at hand,
                     and I like to experiment with different things to see what works. <br>
