--- a/index.html
+++ b/index.html
@@ -1,89 +1,64 @@
 <html lang="en">
-<meta property="og:title" content="Omorian Clifford's Portfolio" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.omorianclifford.com/" />
-<meta property="og:image"
-    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
-<meta property="og:description"
-    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-<meta name="theme-color" content="#00a2ff">
-<meta name="twitter:card"
-    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+    <meta property="og:title" content="Omorian Clifford's Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.omorianclifford.com/" />
+    <meta property="og:image"
+          content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+    <meta property="og:description"
+          content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+    <meta name="theme-color" content="#00a2ff">
+    <meta name="twitter:card"
+          content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="Sass/main.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home Page</title>
+        <link rel="stylesheet" href="Sass/main.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    </head>
 
-<body>
-    <header class="header" id="header">
-        <div class="header-container">
-            <div class="namehome"><a href="index.html">Omorian Clifford</a></div>
-            <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
-            <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
-            <div class="music"><a href="pages/MusicPage.html">Music</a></div>
-            <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
-        </div>
-        <ul class="Menu" id="Menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="/pages/AboutMePage.html">About Me</a></li>
-            <li><a href="/pages/ProjectsPage.html">Projects</a></li>
-            <li><a href="pages/MusicPage.html">Music</a></li>
-            <li><a href="/pages/ContactPage.html">Contact & CV</a></li>
-            <a class="Close" href="#">
+    <body>
+        <header class="header" id="header">
+            <div class="header-container">
+                <div class="namehome"><a href="index.html">Omorian Clifford</a></div>
+                <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
+                <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
+                <div class="music"><a href="pages/MusicPage.html">Music</a></div>
+                <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
+            </div>
+            <ul class="Menu" id="Menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="/pages/AboutMePage.html">About Me</a></li>
+                <li><a href="/pages/ProjectsPage.html">Projects</a></li>
+                <li><a href="pages/MusicPage.html">Music</a></li>
+                <li><a href="/pages/ContactPage.html">Contact & CV</a></li>
+                <a class="Close" href="#">
+                    <span class="material-icons">
+                        close
+                    </span>
+                </a>
+            </ul>
+            <a class="Hamburger" href="#Menu">
                 <span class="material-icons">
-                    close
+                    menu
                 </span>
             </a>
-        </ul>
-        <a class="Hamburger" href="#Menu">
-            <span class="material-icons">
-                menu
-            </span>
-        </a>
-    </header>
+        </header>
 
-    <div class="PageContainer">
-        <div class="AMC">
-            <a href="/pages/AboutMePage.html">
-                <span>About Me Page</span>
-                <img class="ABMImg"
-                    src="https://cdn.discordapp.com/attachments/973888571339575347/981836688525504562/ABMImg.png"
-                    alt="">
-            </a>
-        </div>
 
-        <div class="PJC">
-            <a href="/pages/ProjectsPage.html">
-                <span>Projects Page</span>
-                <img class="ProjectImg"
-                    src="https://cdn.discordapp.com/attachments/973888571339575347/981538625223291000/unknown.png"
-                    alt="">
-            </a>
+        <div class="homeContainer">
+            <div class="introContainer">
+                <img class="selfie"
+                     src="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg"
+                     alt="Picture of me">
+                <div class="introTextContainer">
+                    <h1 class="introHeader">Hello, my name is Omorian</h1>
+                    <h3 class="introSubHeader">I am a game development student and music producer/sound designer from the Netherlands</h3>
+                </div>
+            </div>
         </div>
-
-        <div class="MC">
-            <a class="MPC" href="/pages/MusicPage.html">
-                <span>Music Page</span>
-                <img class="MusicImg"
-                    src="https://cdn.discordapp.com/attachments/973888571339575347/981536042102439996/unknown.png"
-                    alt="">
-            </a>
-        </div>
-
-        <div class="CCVC">
-            <a href="/pages/ContactPage.html">
-                <span>Contact & CV</span>
-                <img class="CCVCImage"
-                    src="https://cdn.discordapp.com/attachments/973888571339575347/981838315437293578/ContactImage.png"
-                    alt="">
-            </a>
-        </div>
-    </div>
-</body>
+    </body>
 
 </html>
